2006-01-06  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, configure.ac: Renamed configure.in to
	  configure.ac, to make the package working with the current
	  versions of aclocal and autoconf.

2005-11-13  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE, beh.in: Updated documentation, to take into
	  account beh and HPLIP, dropped HPOJ in the documentation.

2005-09-12  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Better support for non-PJL JCLs. If there are
	  Foomatic options of execution style JCL, they are only prefixed
	  with "@PJL " if the PPD does not contain a "*JCLBegin:"
	  expression not containing "PJL" and if the prefix is not
	  changed by a "*FoomaticJCLPrefix:" in the PPD file. If there
	  is a "*JCLBegin:" without "PJL" and no "*FoomaticJCLPrefix:"
	  the JCL commands do not get any prefix. Fixed also bug of
	  $jobuser and $jobhost not being chomped.

2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>

	* beh.in, configure.in, Makefile.in: Added the "beh" (Backend
	  Error Handler) CUPS backend. With this the handling of errors
	  of the CUPS backends (printer communication errors, like
	  printer not turned on) can be configured, instead of CUPS
	  simply disabling the print queue.

2005-07-29  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Added substitution of special XML entities by
	  job data, as date, time, job ID, user name, ... (in function
	  "unhtmlify()"). This was suggested by George Liu from Ricoh
	  (george dot liu at ussj dot ricoh dot com), to support jobs
	  with submission of login/password to the printer.

2005-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in, foomatic-gswrapper.in: Fix for the fix on the
	  regexp for reading the config file (Thanks to Hans-Dieter Kosch,
	  hdkosch at t-online dot de, for this fix).

2005-07-18  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: In quiet mode (non-logging mode) $logh is